adding missed tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
 # reload configs
 bind r source-file ~/.tmux.conf
 
+# make the prefix key Ctrl+J
+unbind C-b
+set -g prefix C-j
+
 # split pane commands that make some lick of sense
 bind | split-window -h
 bind - split-window -v
@@ -20,3 +24,15 @@ set -g mouse-resize-pane on
 
 # keep window names
 set-option -g allow-rename off
+
+# cool status bar stuff
+set -g status-bg red
+set -g status-fg brightwhite
+set-option -g status-justify centre
+set-option -g status-left '#[bg=brightred,fg=black] #S '
+set-option -g status-left-length 15
+set-window-option -g window-status-format '#[fg=black] #I:#W '
+set-window-option -g window-status-current-format '#[fg=brightwhite,bg=black] #I:#W '
+set -g status-right '#[fg=black,bg=brightred] %a @ %R '
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=red
