adding scroll to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,7 @@ bind -n M-Down select-pane -D
 set -g mouse-select-window on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
+set -g mode-mouse on
 
 # keep window names
 set-option -g allow-rename off
