--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,20 +2,27 @@
 bind r source-file ~/.tmux.conf
 
 # make the prefix key Ctrl+J
-unbind C-b
-set -g prefix C-j
+set-option -g prefix C-j
+set-option -g prefix2 C-b
 
 # split pane commands that make some lick of sense
 bind | split-window -h
+bind \ split-window -h
 bind - split-window -v
-unbind '"'
-unbind %
+# unbind '"'
+# unbind %
 
 # switch panes with Alt-arrow keys without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# also allow vim movement commands to switch panes
+bind h select-pane -L
+bind l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
 
 # enable mouse
 set -g mouse-select-window on
@@ -27,13 +34,20 @@ set -g mode-mouse on
 set-option -g allow-rename off
 
 # cool status bar stuff
-set -g status-bg red
+set -g status-bg blue
 set -g status-fg brightwhite
 set-option -g status-justify centre
-set-option -g status-left '#[bg=brightred,fg=black] #S '
+set-option -g status-left '#[bg=brightblue,fg=black] #S '
 set-option -g status-left-length 15
 set-window-option -g window-status-format '#[fg=black] #I:#W '
 set-window-option -g window-status-current-format '#[fg=brightwhite,bg=black] #I:#W '
-set -g status-right '#[fg=black,bg=brightred] %a @ %R '
-set -g pane-border-style fg=black
-set -g pane-active-border-style fg=red
+set -g status-right '#[fg=black,bg=brightblue] %a @ %R '
+set-option -g pane-border-fg black
+set -g pane-active-border-style fg=blue
+
+# top status bar for host machine
+set-option -g status-position top
+
+# sync panes
+bind y set-option synchronize-panes
+set-window-option -ag window-status-current-format '#{?pane_synchronized,#[fg=brightred](SYNC)#[bg=black] ,}'
