--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,10 +25,11 @@ bind k select-pane -U
 bind j select-pane -D
 
 # enable mouse
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mode-mouse on
+# set -g mouse-select-window on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mode-mouse on
+set -g mouse on
 
 # keep window names
 set-option -g allow-rename off
