adding tmux zoom notice

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ set -g status-bg blue
 set -g status-fg brightwhite
 set-option -g status-justify centre
 set-option -g status-left '#[bg=brightblue,fg=black] #S '
-set-option -g status-left-length 45
+set-option -g status-left-length 50
 set-window-option -g window-status-format '#[fg=black] #I:#W '
 set-window-option -g window-status-current-format '#[fg=brightwhite,bg=black] #I:#W '
 set -g status-right '#[fg=black,bg=brightblue] %a @ %R '
@@ -51,4 +51,5 @@ set-option -g status-position top
 
 # sync panes
 bind y set-option synchronize-panes
+set-window-option -ag window-status-current-format '#{?window_zoomed_flag,#[fg=yellow](ZOOM) ,}'
 set-window-option -ag window-status-current-format '#{?pane_synchronized,#[fg=brightred](SYNC)#[bg=black] ,}'
